@@ -29,6 +29,7 @@
     lib64 instead of just lib. Pass -DUSE_LIB64_FOR_HELPERS=ON to cmake.
 20. In tag editor, only mark rating as changed if it has been.
 21. For Linux non-KDE builds, use login1 interface to detect system resuming.
+22. Enable scrobble 'love' button even if scrobbling is disabled.
 
 1.5.1
 -----
